<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_drawable"
    android:layout_marginTop="8dip" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/player_kick"
        android:layout_alignBottom="@+id/player_kick"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/player_kick"
        android:text="@string/player"
        android:textColor="#FF000000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/player_ban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/player_ban" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/player_kick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/player_ban"
        android:text="@string/player_kick" />

</RelativeLayout>
