<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="?attr/colorSurfaceContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">
            <ImageButton
                android:layout_gravity="start"
                android:id="@+id/nav_back"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="?attr/colorOnSurface"
                android:src="@drawable/ic_arrow_back_24px"/>
            <TextView
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="?attr/colorOnSurface"
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_settings"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_colored_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/auto_text_colored_graphs"
            android:textSize="18sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_open_console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/auto_text_open_console_on_star"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/auto_text_language">
            
            <AutoCompleteTextView
                android:id="@+id/language_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/machine_translated_text"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/btn_support"
            style="@style/Widget.Material3.Button.TonalButton"/>

    </LinearLayout>

</LinearLayout>
