<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ConfigFragment" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="?attr/colorSurfaceContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">
            <TextView
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="?attr/colorOnSurface"
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_title_options"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

	<include layout="@layout/config" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/config_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:text="@string/config_save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/config_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/config_save"
            android:text="@string/config_cancel"
            android:layout_marginRight="12px"
            />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/config_advanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/config_cancel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/config_cancel"
            android:text="@string/config_advanced" />

    </RelativeLayout>

</LinearLayout>