<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/auto_hint_search_versions">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_layout"
        android:layout_above="@+id/bottom_bar"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/versions_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <ImageButton
                android:id="@+id/prevBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:padding="24px"
                android:background="@drawable/bg_rounded"
                android:src="@drawable/ic_chevron_left_24px" />
                
            <TextView
                android:id="@+id/pageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="24dp" />

            <ImageButton
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24px"
                android:background="@drawable/bg_rounded"
                android:src="@drawable/ic_chevron_right_24px" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/importCustomCoreBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24px"
            android:layout_marginBottom="8dp"
            android:text="@string/auto_text_import_custom_core" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skipBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip_version_sel"
            android:padding="24px"
            android:visibility="gone" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>